Amount and payment rework (#103)
* adjusting backend so that payments become much easier to do; also added total_amount property to ExpenseDTO

* added function to mark all splits of an expense as paid without owner validation. Should be used with caution

* displaying total amount
